Implementation change
Changed to only implement C